config section main

--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -52,24 +52,30 @@
 
       <div class="cards">
         <div class="card translate">
-          <img src="../img/servicios/cortaFuego.png">
-          <a href="https://tinyurl.com/2df8opcy">
-            <h3 class="textos translate">Pintura intumescente</h3>
-          </a>
+          <div><img src="../img/servicios/cortaFuego.jpg"></div>
+          <div> <a href="https://tinyurl.com/2df8opcy">
+            <p class="textos translate">Pintura intumescente</p></a></div>
         </div>
+        
+
+
+
+
 
         <div class="card translate">
-          <img src="../img/servicios/cortaFuego.png">
-          <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
-            <h3 class="textos translate">Puertas cortafuego</h3>
-          </a>
+          <div><img src="../img/servicios/cortaFuego.jpg"></div>
+          <div><a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
+           <p class="textos translate">Puertas cortafuego</p></a></div>
         </div>
 
+
+
+
         <div class="card translate">
-          <img src="../img/servicios/cortaFuego.png">
-          <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
-            <h3 class="textos translate">Sist de barreras de Humo</h3>
-          </a>
+          <div><img src="../img/servicios/cortaFuego.jpg"></div>
+          <div><a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
+            <p class="textos translate">Sist de barreras de Humo</p>
+          </a></div>
         </div>
       </div>
 
