--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -51,17 +51,17 @@
       <div class="cards">
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h4 >Maestro carpintero</h4>
+          <p >Maestro carpintero</p>
         </div>
 
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h4>Prevencionista de riesgos</h4>
+          <p>Prevencionista de riesgos</p>
         </div>
 
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h4>Asistente administrativa</h4>
+          <p>Asistente administrativa</p>
         </div>
 
       </div>
