--- a/pages/nuestro_trabajo.html
+++ b/pages/nuestro_trabajo.html
@@ -53,17 +53,17 @@
       <div class="cards">
         <div class="card translate">
           <img src="../img/nuestro_trabajo/metro .png">
-          <a href="https://www.metro.cl"><h4 class="textos translate">Metro</h4></a>
+          <a href="https://www.metro.cl"><p class="textos translate">Metro</p></a>
         </div>
 
         <div class="card translate">
           <img src="../img/nuestro_trabajo/hospSalvador.png">
-          <a href="https://www.hsalvador.cl"><h4 class="textos translate"3>Hospital El Salvador</h4></a>
+          <a href="https://www.hsalvador.cl"><p class="textos translate"3>Hospital El Salvador</p></a>
         </div>
 
         <div class="card translate">
           <img src="../img/nuestro_trabajo/falabella .png">
-          <a href="https://www.falabella.com"><h4 class="textos translate">Falabella</h4></a>
+          <a href="https://www.falabella.com"><p class="textos translate">Falabella</p></a>
         </div>
 
       </div>
