--- a/pages/implementos.html
+++ b/pages/implementos.html
@@ -8,17 +8,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/style.css">
-  <meta name="keywords" content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago">
-  <title>Beck_Soluciones</title>
+  <meta name="keywords"
+    content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago, herramientas, sellos, retardante ">
+  <title>Materiales</title>
   <link rel="icon" href="./img/logo.jpg" sizes="16x16 32x32" type="image/jpg">
 </head>
 
 <body>
+
   <header class="headline">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
       <a class="navbar-brand" href="https://becksoluciones.000webhostapp.com/index.html"><img src="../img/logo.jpg"
           alt="logoBeck"></a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,46 +29,65 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Inicio</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./pages/clientes.html">Clientes</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/implementos.html">Equipos</a>
+            <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/conocenos.html">Conócenos</a>
+            <a class="nav-link" href="./implementos.html">Equipos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/trabaja_con_nosotros.html">Únete</a>
+            <a class="nav-link" href="./conocenos.html">Conócenos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/hablemos.html">Hablemos</a>
+            <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./hablemos.html">Hablemos</a>
           </li>
         </ul>
       </div>
     </nav>
+
   </header>
 
   <main>
-    <section class="index">
-      <h3>IMPLEMENTACION INTERNA</h3>
-      <div class="containerIlust">
-        <img src="./img/index/IlustracionB.png" alt="edificioConCortaFuego">
-      </div>
-    </section>
-  </main>
-  
-</body>
-  <footer>
-    <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
-    </div>
-  </footer>
+    <section class="services">
+      <h3>EQUIPAMIENTO</h3>
 
+      <div class="cards">
+        <div class="card translate">
+          <img src="../img/servicios/retardante.jpg" alt="PinturaRetardante">
+          <a href="https://firemat.cl/productos/" class="btn btn-warning btn-lg">Implementos</a>
+        </div>
+
+
+        <div class="card translate">
+          <img src="../img/servicios/collares.jpeg" alt="ImplementoCollar">
+          <a href="https://firemat.cl/categoria-producto/accesorios/" class="btn btn-warning btn-lg">Herramientas</a>
+        </div>
+
+
+        <div class="card translate">
+          <img src="../img/servicios/cinta.png" alt="Sellos">
+          <a href="https://firemat.cl/categoria-producto/cintas-wraps/" class="btn btn-warning btn-lg">Sellos</a>
+        </div>
+      </div>
+
+    </section>
+
+  </main>
+
+
+</body>
+
+<footer>
+  <div class="containerFooter">
+    <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+  </div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 </html>
