--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-  <title>Trabaja con BECK</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/style.css">
+  <meta name="keywords"
+    content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago, empleo, trabajo, equipo, terreno">
+  <title>Trabaja con BECK</title>
+  <link rel="icon" href="./img/logo.jpg" sizes="16x16 32x32" type="image/jpg">
 </head>
+
 <body>
   <header class="headline">
-    <div>
-      <img class="logoImg" src="../img/logo.jpg" alt="logoBeck">
-    </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="https://becksoluciones.000webhostapp.com/index.html"><img src="../img/logo.jpg"
+          alt="logoBeck"></a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,16 +31,16 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
+            <a class="nav-link" href="./clientes.html">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./servicio.html">Servicios</a>
+            <a class="nav-link" href="./implementos.html">Equipos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./conocenos.html">Conócenos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./trabaja_con_nosotros.html">Trabaja con nosotros</a>
+            <a class="nav-link" href="./trabaja_con_nosotros.html">Únete</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./hablemos.html">Hablemos</a>
@@ -44,38 +51,50 @@
 
   </header>
 
- <main>
-    <section class="works" >
+  <main>
+    <section class="works">
       <h3>POSTULA</h4>
 
-      <div class="cards">
-        <div class="card translate">
-          <img src="../img/trabaja_con_nosotros/cv.png">
-          <p >Maestro carpintero</p>
-        </div>
+        <div class="cards">
+          <div class="card translate">
+            <a href="https://www.trabajando.cl/"><img
+                src="../img/trabaja_con_nosotros/asistenteadministrativa.jpg"></a>
+            <a href="https://www.metro.cl/"
+              class="btn btn-warning btn-lg">ASISTENTE CONTABLE</a>
+          </div>
 
-        <div class="card translate">
-          <img src="../img/trabaja_con_nosotros/cv.png">
-          <p>Prevencionista de riesgos</p>
-        </div>
+          <div class="card translate">
+            <a href="https://www.trabajando.cl/"><img
+                src="../img/trabaja_con_nosotros/maestroCarpintero.jpg"></a>
+            <a href="https://www.trabajando.cl/"
+              class="btn btn-warning btn-lg">MAESTRO CARPINTERO</a>
+          </div>
 
-        <div class="card translate">
-          <img src="../img/trabaja_con_nosotros/cv.png">
-          <p>Asistente administrativa</p>
-        </div>
+          <div class="card translate">
+            <a href="https://www.trabajando.cl/"><img
+                src="../img/trabaja_con_nosotros/prevencionriesgos.jpg"></a>
+            <a href="https://www.trabajando.cl/"
+              class="btn btn-warning btn-lg">INGENIERO</a>
+          </div>
 
-      </div>
+        </div>
 
     </section>
 
   </main>
 
-</body>
 
-<footer>
-  <div class="containerFooter">
-    <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
-  </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
+  <footer>
+    <div class="containerFooter">
+      <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+    </div>
+  </footer>
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</html>
+
 </html>
