--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </body>
   <footer>
     <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
     </div>
   </footer>
 
