--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -53,7 +53,7 @@
 
   <main>
     <section class="works">
-      <h3>CLIENTES</h3>
+      <h3>Clientes</h3>
 
       <div class="cards">
         <div class="card translate">
@@ -86,7 +86,7 @@
 
   <footer>
     <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
     </div>
   </footer>
 </body>
