--- a/pages/implementos.html
+++ b/pages/implementos.html
@@ -54,7 +54,7 @@
 
   <main>
     <section class="services">
-      <h3>EQUIPAMIENTO</h3>
+      <h3>Equipamiento</h3>
 
       <div class="cards">
         <div class="card translate">
@@ -84,7 +84,7 @@
 
 <footer>
   <div class="containerFooter">
-    <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+    <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
