--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -53,7 +53,7 @@
 
   <main>
     <section class="works">
-      <h3>POSTULA</h4>
+      <h3>Postula</h4>
 
         <div class="cards">
           <div class="card translate">
@@ -87,7 +87,7 @@
 
   <footer>
     <div class="containerFooter">
-      <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
+      <h5>Copyright © 2023 Beck Soluciones | Created by MCBE </h5>
     </div>
   </footer>
 </body>
