text conocenos edit

--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -58,7 +58,7 @@
   <div class="contenedor_hablemos">
     <div class="texto_ubicacion" alt="textoUbicacion"> 
       
-      <p>Hola Bienvenido! Aquí nos encontramos:<br> Avenida Holanda #099, Of 1101 11P<br> Providencia, R.M , Chile<br>
+      <p>Hola Bienvenido! 
         <p>*****************</p>
         Hola somos BECK Soluciones, estamos conformados por un equipo de profesionales multidisciplinarios especializados en protección pasiva contra incendios.  <br>
         Nuestro principal enfoque es asesorar, suministrar e instalar soluciones de protección pasiva en edificios y estructuras para minimizar los  <br>
